Fri Feb 12 00:15:35 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_plugin.cpp:

          Updated keyword for version.

Fri Feb 12 00:13:39 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_Export.h:
        * tools/odds_dissector/odds_dissector.mpc:
        * tools/odds_dissector/odds_dissector.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Finished bootstrap code; plugin now initializes correctly
          in wireshark and registers itself as a proper dissector.

Thu Feb 11 22:52:45 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Updated to simplify process management.  Added use of anonymous
          closures for statistics gathering to factor common processing.

        * performance-tests/Bench/doc/datamodel.txt:

          Added documentation for new Publication "StartAfterDelay" and
          existing but undocumented "Associations" test parameters.

        * performance-tests/Bench/src/EntityProfiles.h:

          PublicationProfile
            - added new 'delay' member to hold the "StartAfterDelay"
              test parameter value.

        * performance-tests/Bench/src/Options.cpp:

          loadPublication() - added new "StartAfterDelay" test parameter.

        * performance-tests/Bench/src/Gaussian.cpp:

          value() - make deviation_ comparison to floating point literal.

        * performance-tests/Bench/src/Process.cpp:

          run()
            - simplified initiation processing to use new
              Publication::ready() state information directly rather than
              examining changed status conditions.
            - simplified termination processing to use new
              Subscription::active() state information directly rather than
              examining changed status conditions.
            - print timeout and duration information as well as message